@@ -1916,17 +1916,19 @@
     <control type="group">
       <visible>Player.HasAudio + !Skin.HasSetting(homepageMusicinfo) + String.IsEmpty(Window(Videos).Property(PlayingBackgroundMedia))</visible>
       <left>20</left>
+      <animation effect="fade" end="100" time="300" tween="quadratic" easing="out">WindowOpen</animation>
+      <animation effect="fade" start="100" time="300" tween="quadratic" easing="out">WindowClose</animation>
       <!--cover-->
-      <control_off type="image">
+      <control type="image">
         <description>cover image</description>
-        <left>20</left>
-        <top>30</top>
-        <width>450</width>
-        <height>450</height>
+        <left>305r</left>
+        <top>210</top>
+        <width>300</width>
+        <height>300</height>
         <texture fallback="DefaultAlbumCover.png">$INFO[Player.Art(thumb)]</texture>
         <bordertexture border="8">ThumbShadow.png</bordertexture>
         <bordersize>8</bordersize>
-      </control_off>
+      </control>
       <!-- the music title -->
       <control type="label">
         <left>365</left>
