@@ -1,3 +1,6 @@
+[B]1.0.18[/B]
+- Set PDC Background integrated in skin
+
 [B]1.0.17[/B]
 - added Title, Artist and Tracktime Labels for Home
 
